# svm-pay

./: .eslintrc.json  .gitignore  BUILD-OPTIMIZATION.md  CLI-INTEGRATION.md  NPM-INTEGRATION.md  README.md  SECURITY.md  UWUIFY_RESULTS.md  UWUIFY_TEST.md  WALLETCONNECT-INTEGRATION-UPDATE.md  WALLETCONNECT-INTEGRATION.md  jest.config.js  logo.html  netlify.toml  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json
.github/workflows/: ci.yml  flutter-tests.yml  publish.yml
__tests__/: setup.ts
__tests__/bridge/: cross-chain.test.ts  url-scheme.test.ts
__tests__/cli/: commands.test.ts
__tests__/core/: memory-payment-store.test.ts  payment-id-parser.test.ts
__tests__/sdk/: assembly-bpf.test.ts  security.test.ts
cpp-sdk/: .gitignore  BUILD.md  CMakeLists.txt  README.md  vcpkg.json
cpp-sdk/cmake/: svm-pay-config.cmake.in
cpp-sdk/examples/: CMakeLists.txt  basic_payment.cpp
cpp-sdk/include/svm-pay/: client.hpp  svm_pay.hpp
cpp-sdk/include/svm-pay/core/: exceptions.hpp  reference.hpp  types.hpp  url_scheme.hpp
cpp-sdk/include/svm-pay/network/: adapter.hpp  curl_initializer.hpp  solana.hpp
cpp-sdk/src/: client.cpp  svm_pay.cpp
cpp-sdk/src/core/: reference.cpp  types.cpp  url_scheme.cpp
cpp-sdk/src/network/: adapter.cpp  curl_initializer.cpp  solana.cpp
cpp-sdk/tests/: CMakeLists.txt  test_client.cpp  test_reference.cpp  test_types.cpp  test_url_scheme.cpp
docs/: architecture.md  cross-chain-payments.md  developer-guide.md  documentation.md  final-checklist.md  n8n-integration.md  requirements.md  security-recommendations.md  todo.md
docs/assembly-bpf/: README.md  security-patterns.md
examples/: README.md  cross-chain-payment-demo.html  point-of-sale-demo.tsx  subscription-payment-demo.tsx  wallet-connect-demo.html  wallet-connect-test.tsx  web-payment-demo.jsx
examples/assembly-bpf/: README.md  custom-validator.js  demo.js  hello-world.js  memory-management.js  payment-processor.js
examples/cpp-examples/: README.md
examples/cpp-examples/basic-payment/: README.md
examples/cpp-examples/network-adapters/: README.md  network_adapter.cpp
examples/cpp-examples/url-parsing/: README.md  url_parsing.cpp
examples/n8n-integration/: README.md  package.json
examples/n8n-integration/workflows/: ecommerce-automation.json
flutter_sdk/: CRITICAL_BUG_FIXES.md  E2E_TEST_REPORT.md  README.md  SECURITY_AUDIT.md  pubspec.yaml
flutter_sdk/android/: build.gradle
flutter_sdk/example/: pubspec.yaml
flutter_sdk/example/integration_test/: plugin_integration_test.dart
flutter_sdk/example/lib/: main.dart
flutter_sdk/example/test/: widget_test.dart
flutter_sdk/ios/: flutter_sdk.podspec
flutter_sdk/ios/Classes/: FlutterSdkPlugin.swift
flutter_sdk/lib/: svm_pay.dart
flutter_sdk/lib/src/: network_adapters.dart  payment_widgets.dart  svm_pay_sdk.dart  types.dart
flutter_sdk/scripts/: validate_tests.sh
flutter_sdk/test/: bug_fixes_test.dart  integration_test.dart  security_test.dart  svm_pay_test.dart  widget_test.dart
mobile/: README.md
scripts/: build-mobile.sh  deploy.sh  optimize-build.js  security-audit.sh
src/: index.ts
src/bridge/: adapter.ts  allbridge.ts  index.ts  utils.ts  wormhole.ts
src/cli/: index.ts
src/cli/commands/: balance.ts  history.ts  pay.ts  setup.ts  usage.ts
src/cli/utils/: config.ts  history.ts  openrouter.ts  solana.ts
src/core/: cross-chain.ts  index.ts  metadata.ts  reference.ts  transaction-handler.ts  transfer-handler.ts  types.ts  url-scheme.ts
src/integration/: index.ts  npm-package.ts
src/network/: adapter.ts  detector.ts  eclipse.ts  index.ts  solana.ts  sonic.ts  soon.ts
src/network/evm/: adapter.ts  ethereum.ts  index.ts
src/sdk/: angular-integration.ts  api-docs.js  index.ts  mobile.ts  react-integration.tsx  react.tsx  server.ts  solana-integration.ts  solana-payment.tsx  solana-provider.tsx  vue-integration.js  vue.js
src/types/: svm-pay.d.ts
src/walletconnect/: adapter.ts  constants.ts  core.ts  index.ts  types.ts
tests/: eclipse-tests.ts  network-tests.ts  solana-tests.ts  sonic-tests.ts  soon-tests.ts
website/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
website/src/: App.tsx  index.css
(+104 files in other folders)
